Feat: ScoreArchive, GameScore 데이터 구조 변경 및 관련 서비스 로직 변경