@@ -9,11 +9,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.stat.domain.score.GameScore;
-import com.stat.dto.GameScoreSaveRequestDto;
 import com.stat.domain.score.ScoreArchive;
 import com.stat.domain.score.ScoreArchiveRepository;
-import com.stat.dto.ScoreArchiveResponseDto;
 import com.stat.dto.GameScoreDto;
+import com.stat.dto.GameScoreResponseDto;
 import com.stat.exception.GameTypeNotFoundException;
 import com.stat.exception.UserNotFoundException;
 
@@ -25,179 +24,210 @@ public class ScoreArchiveService {
 
 	private final ScoreArchiveRepository scoreArchiveRepository;
 
-	@Transactional
-	public ScoreArchive addScore(GameScoreDto gameScoreDto) {
-		int userId = gameScoreDto.getUserId();
-		String type = gameScoreDto.getType();
-		int score = gameScoreDto.getScore();
-		int endurance = gameScoreDto.getEndurance();
-		int resilience = gameScoreDto.getResilience();
+	// @Transactional(readOnly = true)
+	// public List<ScoreArchiveResponseDto> findByUserId(int userId) {
+	// 	Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
+	//
+	// 	List<ScoreArchiveResponseDto> dtos = new ArrayList<>();
+	// 	if (optionalScoreArchive.isPresent()) {
+	// 		ScoreArchive scoreArchive = optionalScoreArchive.get();
+	//
+	// 		int endurance = 0;    // 지구력
+	// 		int resilience = 0;    // 회탄성
+	// 		int cnt = 0;
+	//
+	// 		// 4가지 게임 역량
+	// 		for (GameScore gameScore : scoreArchive.getGameList()) {
+	// 			gameScore.getScoreList().values().stream()
+	// 				.findFirst()
+	// 				.orElse(null);
+	//
+	// 			for (int i = 0; i < 4; i++) {
+	// 				new ScoreArchiveResponseDto(gameScore.getType(), gameScore.getScoreList());
+	// 			}
+	// 			dtos.add(new ScoreArchiveResponseDto(gameScore.getType(), gameScore.getScoreList().values());
+	//
+	// 			for (List<Integer>cores : gameScore.getScoreList().values()) {
+	// 				endurance += scores.get(1);
+	// 				resilience += scores.get(2);
+	// 			}
+	// 			cnt += 1;
+	// 		}
+	//
+	// 		// 지구력
+	// 		dtos.add(new ScoreArchiveResponseDto("endurance", endurance / cnt));
+	//
+	// 		// 회탄성
+	// 		dtos.add(new ScoreArchiveResponseDto("resilience", resilience / cnt));
+	//
+	// 	} else {
+	// 		throw new UserNotFoundException(String.format("해당 사용자 (%s)에 대한 게임 기록이 없습니다.", userId));
+	// 	}
+	// 	return dtos;
+	// }
 
-		Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
+	// private static int calculateAverage(List<Integer> values) {
+	// 	if (values == null || values.isEmpty()) {
+	// 		return 0;
+	// 	}
+	// 	int sum = 0;
+	//
+	// 	for (Integer value : values) {
+	// 		sum += value;
+	// 	}
+	//
+	// 	return sum / values.size();
+	// }
+	//
+	// private static int calculateEnduranceAverage(ScoreArchive scoreArchive) {
+	// 	List<Integer> enduranceList = new ArrayList<>();
+	// 	for (GameScore gameScore : scoreArchive.getGameList()) {
+	// 		enduranceList.addAll(gameScore.get());
+	// 	}
+	// 	return calculateAverage(enduranceList);
+	// }
+	//
+	// public static int calculateResilienceAverage(ScoreArchive scoreArchive) {
+	// 	List<Integer> resilienceList = new ArrayList<>();
+	// 	for (GameScore gameScore : scoreArchive.getGameList()) {
+	// 		resilienceList.addAll(gameScore.getResilienceList());
+	// 	}
+	// 	return calculateAverage(resilienceList);
+	// }
 
-		// ScoreArchive
-		if (optionalScoreArchive.isEmpty()) {
-			GameScore gameScore = createGameScore(type, score, endurance, resilience);
-			return scoreArchiveRepository.save(createScoreArchive(userId, gameScore));
-		}
-		ScoreArchive scoreArchive = optionalScoreArchive.get();
-
-		// GameScore
-		Optional<GameScore> optionalGameScore = findGameScoreByType(scoreArchive, type);
-
-		if (optionalGameScore.isPresent()) {
-			GameScore gameScore = optionalGameScore.get();
-			gameScore.getScoreList().add(0, score);
-			gameScore.getEnduranceList().add(0, endurance);
-			gameScore.getResilienceList().add(0, resilience);
-		} else {
-			GameScore gameScore = createGameScore(type, score, endurance, resilience);
-			scoreArchive.getGameScores().add(gameScore);
-		}
-		return scoreArchiveRepository.save(scoreArchive);
-	}
-
-	private GameScore createGameScore(String type, int score, int endurance, int resilience) {
-		List<Integer> scoreList = new ArrayList<>();
-		scoreList.add(0, score);
-
-		List<Integer> enduranceList = new ArrayList<>();
-		enduranceList.add(0, endurance);
-
-		List<Integer> resilienceList = new ArrayList<>();
-		resilienceList.add(0, resilience);
-
-		return GameScore.builder()
-			.type(type)
-			.scoreList(scoreList)
-			.enduranceList(enduranceList)
-			.resilienceList(resilienceList)
-			.build();
-	}
-
-	private ScoreArchive createScoreArchive(int userId, GameScore gameScore) {
-		List<GameScore> gameScores = new ArrayList<>();
-		gameScores.add(gameScore);
-
-		return ScoreArchive.builder()
-			.userId(userId)
-			.gameScores(gameScores)
-			.build();
-	}
-
-	private Optional<GameScore> findGameScoreByType(ScoreArchive scoreArchive, String type) {
-		return scoreArchive.getGameScores().stream()
-			.filter(gameScore -> gameScore.getType().equals(type))
-			.findFirst();
-	}
-
-	@Transactional(readOnly = true)
-	public List<ScoreArchiveResponseDto> findByUserId(int userId) {
-		Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
-
-		List<ScoreArchiveResponseDto> dtos = new ArrayList<>();
-		if (optionalScoreArchive.isPresent()) {
-			ScoreArchive scoreArchive = optionalScoreArchive.get();
-
-			// 4가지 게임 역량
-			for (GameScore gameScore : scoreArchive.getGameScores()) {
-				dtos.add(new ScoreArchiveResponseDto(gameScore.getType(), gameScore.getScoreList().get(0)));
-			}
-
-			// 지구력
-			dtos.add(new ScoreArchiveResponseDto("endurance", calculateEnduranceAverage(scoreArchive)));
-
-			// 회탄성
-			dtos.add(new ScoreArchiveResponseDto("resilience", calculateResilienceAverage(scoreArchive)));
-
-
-		} else {
-			throw new UserNotFoundException(String.format("해당 사용자 (%s)에 대한 게임 기록이 없습니다.", userId));
-		}
-		return dtos;
-	}
-
-	@Transactional(readOnly = true)
-	public ScoreArchiveResponseDto findByUserIdAndGameType(int userId, String type) {
-		Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
-
-		ScoreArchiveResponseDto dto;
-		if (optionalScoreArchive.isPresent()) {
-			ScoreArchive scoreArchive = optionalScoreArchive.get();
-
-			Optional<GameScore> first = scoreArchive.getGameScores()
-				.stream()
-				.filter(gameScore -> type.equals(gameScore.getType()))
-				.findFirst();
-
-			if (first.isPresent()) {
-				dto = new ScoreArchiveResponseDto(type, first.get().getScoreList().get(0));
-				return dto;
-			} else {
-				throw new GameTypeNotFoundException(String.format("해당 사용자 (%s)에 대한 %s 기록이 없습니다.", userId, type));
-			}
-		} else {
-			throw new UserNotFoundException(String.format("해당 사용자 (%s)에 대한 게임 기록이 없습니다.", userId));
-		}
-	}
-
-	private static int calculateAverage(List<Integer> values) {
-		if (values == null || values.isEmpty()) {
-			return 0;
-		}
-		int sum = 0;
-
-		for (Integer value : values) {
-			sum += value;
-		}
-
-		return sum / values.size();
-	}
-
-	private static int calculateEnduranceAverage(ScoreArchive scoreArchive) {
-		List<Integer> enduranceList = new ArrayList<>();
-		for (GameScore gameScore : scoreArchive.getGameScores()) {
-			enduranceList.addAll(gameScore.getEnduranceList());
-		}
-		return calculateAverage(enduranceList);
-	}
-
-	public static int calculateResilienceAverage(ScoreArchive scoreArchive) {
-		List<Integer> resilienceList = new ArrayList<>();
-		for (GameScore gameScore : scoreArchive.getGameScores()) {
-			resilienceList.addAll(gameScore.getResilienceList());
-		}
-		return calculateAverage(resilienceList);
-	}
+	// @Transactional(readOnly = true)
+	// public ScoreArchiveResponseDto findByUserIdAndGameType(int userId, String type) {
+	// 	Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
+	//
+	// 	ScoreArchiveResponseDto dto;
+	// 	if (optionalScoreArchive.isPresent()) {
+	// 		ScoreArchive scoreArchive = optionalScoreArchive.get();
+	//
+	// 		Optional<GameScore> first = scoreArchive.getGameScores()
+	// 			.stream()
+	// 			.filter(gameScore -> type.equals(gameScore.getType()))
+	// 			.findFirst();
+	//
+	// 		if (first.isPresent()) {
+	// 			dto = new ScoreArchiveResponseDto(type, first.get().getScoreList().get(0));
+	// 			return dto;
+	// 		} else {
+	// 			throw new GameTypeNotFoundException(String.format("해당 사용자 (%s)에 대한 %s 기록이 없습니다.", userId, type));
+	// 		}
+	// 	} else {
+	// 		throw new UserNotFoundException(String.format("해당 사용자 (%s)에 대한 게임 기록이 없습니다.", userId));
+	// 	}
+	// }
 
 	@Transactional
 	public void addDummyData() {
-		GameScore score1 = new GameScore(
-			new GameScoreSaveRequestDto("cat", Arrays.asList(8, 6), Arrays.asList(8, 6), Arrays.asList(8, 6)));
-		GameScore score2 = new GameScore(
-			new GameScoreSaveRequestDto("road", Arrays.asList(7, 5), Arrays.asList(0, 1), Arrays.asList(7, 5)));
-		GameScore score3 = new GameScore(
-			new GameScoreSaveRequestDto("rotate", Arrays.asList(1, 6), Arrays.asList(4, 5), Arrays.asList(6, 8)));
-		GameScore score4 = new GameScore(
-			new GameScoreSaveRequestDto("rps", Arrays.asList(2, 5), Arrays.asList(1, 3), Arrays.asList(4, 5)));
+		GameScore score1 = new GameScore("cat", List.of(List.of(1, 0, 1, 1)));
+		GameScore score2 = new GameScore("road", List.of(List.of(1, 0, 1, 1)));
+		GameScore score3 = new GameScore("rotate", List.of(List.of(1, 0, 1, 1)));
+		GameScore score4 = new GameScore("rps", List.of(List.of(1, 0, 1, 1)));
 
 		List<GameScore> scores1 = Arrays.asList(score1, score2, score3, score4);
 		ScoreArchive gameScore1 = new ScoreArchive(1, scores1);
 
-		GameScore score5 = new GameScore(
-			new GameScoreSaveRequestDto("cat", Arrays.asList(9, 6), Arrays.asList(7, 2), Arrays.asList(4, 5)));
-		GameScore score6 = new GameScore(
-			new GameScoreSaveRequestDto("road", Arrays.asList(7, 2), Arrays.asList(2, 5), Arrays.asList(4, 5)));
-		GameScore score7 = new GameScore(
-			new GameScoreSaveRequestDto("rotate", Arrays.asList(7, 2), Arrays.asList(2, 0), Arrays.asList(0, 0)));
-		GameScore score8 = new GameScore(
-			new GameScoreSaveRequestDto("rps", Arrays.asList(5, 1), Arrays.asList(9, 9), Arrays.asList(3, 0)));
+		GameScore score5 = new GameScore("cat", List.of(List.of(1, 0, 1, 1)));
+		GameScore score6 = new GameScore("road", List.of(List.of(1, 0, 1, 1)));
+		GameScore score7 = new GameScore("rotate", List.of(List.of(1, 0, 1, 1)));
+		GameScore score8 = new GameScore("rps", List.of(List.of(1, 0, 1, 1)));
 
 		List<GameScore> scores2 = Arrays.asList(score5, score6, score7, score8);
 		ScoreArchive gameScore2 = new ScoreArchive(2, scores2);
 
 		List<ScoreArchive> gameScores = Arrays.asList(gameScore1, gameScore2);
 		scoreArchiveRepository.saveAll(gameScores);
+	}
+
+	@Transactional
+	public void saveGameScore(GameScoreDto gameScoreDto) {
+		ScoreArchive scoreArchive = scoreArchiveRepository.findByUserId(gameScoreDto.getUserId())
+			.orElseGet(() -> ScoreArchive.builder().userId(gameScoreDto.getUserId()).build());
+
+		List<GameScore> gameList = scoreArchive.getGameList();
+		GameScore gameScore = findGameScoreByType(gameScoreDto.getType(), gameList);
+
+		if (gameScore != null) {
+			addScoreToList(gameScore, gameScoreDto);
+		} else {
+			gameScore = createGameScore(gameScoreDto);
+			gameList.add(gameScore);
+		}
+
+		scoreArchiveRepository.save(scoreArchive);
+	}
+
+	private GameScore findGameScoreByType(String type, List<GameScore> gameList) {
+		return gameList.stream()
+			.filter(gameScore -> gameScore.getType().equals(type))
+			.findFirst()
+			.orElse(null);
+	}
+
+	private void addScoreToList(GameScore gameScore, GameScoreDto gameScoreDto) {
+		List<Integer> newScore = List.of(gameScoreDto.getGameId(), gameScoreDto.getScore(),
+			gameScoreDto.getEndurance(), gameScoreDto.getResilience());
+		gameScore.getScoreList().add(0, newScore);
+	}
+
+	private GameScore createGameScore(GameScoreDto gameScoreDto) {
+		List<Integer> score = List.of(gameScoreDto.getGameId(), gameScoreDto.getScore(),
+			gameScoreDto.getEndurance(), gameScoreDto.getResilience());
+		return GameScore.builder()
+			.type(gameScoreDto.getType())
+			.scoreList(List.of(score))
+			.build();
+	}
+
+	// userId 로 조회했을 때 각 게임별 최신 기록 반환
+	@Transactional(readOnly = true)
+	public List<GameScoreResponseDto> findByUserId(int userId) {
+		Optional<ScoreArchive> optionalScoreArchive = scoreArchiveRepository.findByUserId(userId);
+
+		List<GameScoreResponseDto> dtos = new ArrayList<>();
+
+		if (optionalScoreArchive.isPresent()) {
+			ScoreArchive scoreArchive = optionalScoreArchive.get();
+
+			// 4가지 게임 역량
+			for (GameScore gameScore : scoreArchive.getGameList()) {
+				List<Integer> results = gameScore.getScoreList().stream()
+					.findFirst()
+					.orElse(null);
+
+				dtos.add(new GameScoreResponseDto(gameScore.getType(), results));
+			}
+		} else {
+			throw new UserNotFoundException(String.format("해당 사용자 (%s)에 대한 게임 기록이 없습니다.", userId));
+		}
+		return dtos;
+	}
+
+	// userId 와 gameType 으로 조회했을 때, 가장 최신 기록 하나 반환
+	@Transactional(readOnly = true)
+	public GameScoreResponseDto findByUserIdAndGameType(int userId, String gameType) {
+		Optional<GameScore> optionalGameScore = scoreArchiveRepository.findByUserId(userId)
+			.map(scoreArchive1 -> filterGameScoreByType(gameType, scoreArchive1));
+
+		if (optionalGameScore.isPresent()) {
+			GameScore gameScore = optionalGameScore.get();
+			return new GameScoreResponseDto(gameScore.getType(), gameScore.getScoreList().get(0));
+		} else {
+			throw new UserNotFoundException(String.format("해당 사용자 (%d)에 대한 게임 기록이 없습니다.", userId));
+		}
+	}
+
+	private GameScore filterGameScoreByType(String gameType, ScoreArchive scoreArchive) {
+		Optional<GameScore> first = scoreArchive.getGameList().stream()
+			.filter(gameScore -> gameScore.getType().equals(gameType))
+			.findFirst();
+
+		if (first.isPresent()) {
+			return first.get();
+		}
+		throw new GameTypeNotFoundException(String.format("해당 사용자에 대한 게임 %s 기록이 없습니다.", gameType));
 	}
 
 }
